<resources>
    <string name="app_name">Like statistic</string>
    <string name="title_home">Like statistic</string>
    <string name="title_house">House</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_logo_grad">Logo</string>
    <string name="title_heart">Heart</string>
    <string name="title_profile">Profile</string>

    <string name="title_views">Views</string>
    <string name="title_likes">Likes</string>
    <string name="title_commentators">Commentators</string>
    <string name="title_mentions">Mentions</string>
    <string name="title_reposters">Reposts</string>
    <string name="title_bookmarks">Bookmarks</string>
</resources>
